neotoma 1.3.1
====================
o Bugfix for `write_agefile`
o Added a `browse` method for datasets, that will open a browser window for a specific dataset or download.


neotoma 1.3.0
====================
o Improved functionality of get_chroncontrol to allow it to deal with empty tables and work directly with download and download_list objects.

neotoma 1.2-0
====================
o Added new datasettypes for records, including water chemistry, charcoal, XRD and others.

neotoma 1.1-0
====================
o Publication of Goring, S., Dawson, A., Simpson, G. L., Ram, K., Graham, R. W., Grimm, E. C., & Williams, J. W.. (2015). neotoma: A Programmatic Interface to the Neotoma Paleoecological Database, 1(1), Art. 2. DOI: http://doi.org/10.5334/oq.ab


neotoma 0.1
====================
o continued development of API implementation and working toward a common 
  standard for data output.

o Continued development of tests for the package.

o Changed function names to singular.