@@ -46,7 +46,6 @@ S3method(print,site)
 export(bind)
 export(browse)
 export(compile_downloads)
-export(compile_list)
 export(compile_taxa)
 export(counts)
 export(get_chroncontrol)
@@ -69,3 +68,7 @@ importFrom(RJSONIO,fromJSON)
 importFrom(plyr,ldply)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
+importFrom(stats,aggregate)
+importFrom(utils,browseURL)
+importFrom(utils,write.csv)
+importFrom(utils,write.table)
